--- a/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
+++ b/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
@@ -9,17 +9,17 @@ slug: /howtos/redisgraph/redisgraph-cheatsheet
 | :--------------------- | :---------------------- | :----------------- |
 | <button><b>[GRAPH.QUERY](https://oss.redis.com/redisgraph/commands/#graphquery)</b></button> | Execute a query against a named graph | <code>GRAPH.QUERY &lt;graph name&gt; "&lt;query&gt;"</code> |
 | <button><b>[GRAPH.RO_QUERY](https://oss.redis.com/redisgraph/commands/#graphro_query)</b></button> | Executes a read only query against a named graph | <code>GRAPH.RO_QUERY &lt;graph name&gt; "&lt;query&gt;"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH ..."](https://oss.redis.com/redisgraph/commands/#match)</b></button | Query Structure: MATCH describes the relationship between queried entities, using ascii art to represent pattern(s) to match against | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt;"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH ... OPTIONAL MATCH"](https://oss.redis.com/redisgraph/commands/#optional-match)</b></button | The OPTIONAL MATCH clause is a MATCH variant that produces null values for elements that do not match successfully, rather than the all-or-nothing logic for patterns in MATCH clauses. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; OPTIONAL MATCH &lt;pattern&gt;"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ..."](https://oss.redis.com/redisgraph/commands/#where)</b></button | The WHERE clause is not mandatory, but if you want to filter results, you can specify your predicates here.  Click the link to see supported operations. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt;"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ... RETURN ..."](https://oss.redis.com/redisgraph/commands/#return)</b></button | The RETURN clause essentially defines the result set.  In this way, a tailored result-set is customized. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt;"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ... RETRUN ... ORDER BY ..."](https://oss.redis.com/redisgraph/commands/#order-by)</b></button | ORDER BY specifies that the output be sorted and how. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt; ORDER BY &lt;variables&gt; \[ASC\|DESC\]"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … WHERE … RETURN … ORDER BY … SKIP ..."](https://oss.redis.com/redisgraph/commands/#skip)</b></button | SKIP optional clause allows for a specified number of records to be omitted from the result set. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WHERE \<pattern\> RETURN \<pattern\> ORDER BY \<variables\> \[ASC \| DESC \] SKIP \<n\>" where "n" is an integer</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … WHERE … RETURN … ORDER BY … LIMIT ..."](https://oss.redis.com/redisgraph/commands/#limit)</b></button | LIMIT clause is not mandatory and can be used to limit the number of records returned by a RETURN set. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WHERE \<pattern\> RETURN \<pattern\> ORDER BY \<variables\> \[ASC \| DESC \] LIMIT \<n\>" where "n" is an integer</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH ... CREATE …"](https://oss.redis.com/redisgraph/commands/#create) </b></button| CREATE clause is used to introduce new nodes and relationships  | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> CREATE \<nodes\> | relationships\>"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … DELETE …"](https://oss.redis.com/redisgraph/commands/#delete)</b></button | DELETE clause is used to remove both nodes and relationships | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> DELETE \<alias\>"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … SET …"](https://oss.redis.com/redisgraph/commands/#set)</b></button | SET clause is used to create or update properties on nodes and relationships | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> SET \<property value\>"</code> |
-| <button><b>[GRAPH.QUERY ... "MERGE …"](https://oss.redis.com/redisgraph/commands/#merge)</b></button | MERGE clause ensures that a path exists in the graph | <code>GRAPH.QUERY &lt;graph name&gt; "MERGE \<property value\>"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … WITH … AS ..."](https://oss.redis.com/redisgraph/commands/#with)</b></button | WITH clause allows  parts of queries to be independently executed and have their results handled uniquely. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WITH \<property value\> AS \<property value\>"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … UNWIND … AS …"](https://oss.redis.com/redisgraph/commands/#unwind)</b></button | UNWIND clause breaks down a given list into a sequence of records. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH <pattern> UNWIND \<property value\> AS \<property value\>"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … UNION … MATCH"](https://oss.redis.com/redisgraph/commands/#union)</b></button | UNION clause is used to combine the result of multiple queries | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> UNION … MATCH \<pattern\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ..."](https://oss.redis.com/redisgraph/commands/#match)</b></button> | Query Structure: MATCH describes the relationship between queried entities, using ascii art to represent pattern(s) to match against | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt;"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ... OPTIONAL MATCH"](https://oss.redis.com/redisgraph/commands/#optional-match)</b></button> | The OPTIONAL MATCH clause is a MATCH variant that produces null values for elements that do not match successfully, rather than the all-or-nothing logic for patterns in MATCH clauses | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; OPTIONAL MATCH &lt;pattern&gt;"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ..."](https://oss.redis.com/redisgraph/commands/#where)</b></button> | The WHERE clause is not mandatory, but if you want to filter results, you can specify your predicates here.  Click the link to see supported operations. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt;"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ... RETURN ..."](https://oss.redis.com/redisgraph/commands/#return)</b></button> | The RETURN clause essentially defines the result set.  In this way, a tailored result-set is customized. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt;"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ... RETRUN ... ORDER BY ..."](https://oss.redis.com/redisgraph/commands/#order-by)</b></button> | ORDER BY specifies that the output be sorted and how. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt; ORDER BY &lt;variables&gt; \[ASC\|DESC\]"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … WHERE … RETURN … ORDER BY … SKIP ..."](https://oss.redis.com/redisgraph/commands/#skip)</b></button> | SKIP optional clause allows for a specified number of records to be omitted from the result set. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WHERE \<pattern\> RETURN \<pattern\> ORDER BY \<variables\> \[ASC \| DESC \] SKIP \<n\>" where "n" is an integer</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … WHERE … RETURN … ORDER BY … LIMIT ..."](https://oss.redis.com/redisgraph/commands/#limit)</b></button> | LIMIT clause is not mandatory and can be used to limit the number of records returned by a RETURN set. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WHERE \<pattern\> RETURN \<pattern\> ORDER BY \<variables\> \[ASC \| DESC \] LIMIT \<n\>" where "n" is an integer</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ... CREATE …"](https://oss.redis.com/redisgraph/commands/#create) </b></button>| CREATE clause is used to introduce new nodes and relationships  | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> CREATE \<nodes\> | relationships\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … DELETE …"](https://oss.redis.com/redisgraph/commands/#delete)</b></button> | DELETE clause is used to remove both nodes and relationships | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> DELETE \<alias\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … SET …"](https://oss.redis.com/redisgraph/commands/#set)</b></button> | SET clause is used to create or update properties on nodes and relationships | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> SET \<property value\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MERGE …"](https://oss.redis.com/redisgraph/commands/#merge)</b></button> | MERGE clause ensures that a path exists in the graph | <code>GRAPH.QUERY &lt;graph name&gt; "MERGE \<property value\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … WITH … AS ..."](https://oss.redis.com/redisgraph/commands/#with)</b></button> | WITH clause allows  parts of queries to be independently executed and have their results handled uniquely. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WITH \<property value\> AS \<property value\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … UNWIND … AS …"](https://oss.redis.com/redisgraph/commands/#unwind)</b></button> | UNWIND clause breaks down a given list into a sequence of records. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH <pattern> UNWIND \<property value\> AS \<property value\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … UNION … MATCH"](https://oss.redis.com/redisgraph/commands/#union)</b></button> | UNION clause is used to combine the result of multiple queries | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> UNION … MATCH \<pattern\>"</code> |
