--- a/docs/howtos/socialnetwork/index-socialnetwork.mdx
+++ b/docs/howtos/socialnetwork/index-socialnetwork.mdx
@@ -3,7 +3,7 @@ id: index-socialnetwork
 title: How to Build a Social Network Application using RediSearch and NodeJS
 sidebar_label: Building a Social Network Application using RediSearch
 slug: /howtos/socialnetwork/
-authors: [julian]
+authors: [julian,manuel]
 ---
 
 ![image](images/socialnetwork.png)
