added page for Redis OM for Node.js

--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -12,20 +12,27 @@ import RedisCard from '@site/src/theme/RedisCard';
 The following links provides you with the available options to develop your application using NodeJS and Redis
 
 <div class="row">
-
- <div class="col">
-     <RedisCard
+   <div class="col">
+      <RedisCard
         title="Getting Started"
         description="Node.js and Redis"
         page="/develop/node/gettingstarted"
         />
-</div>
+  </div>
 
   <div class="col">
-     <RedisCard
+    <RedisCard
         title="Node.js Crash Course"
         description="Node.js Crash Course"
         page="/develop/node/node-crash-course"
+        />
+  </div>
+
+  <div class="col">
+    <RedisCard
+        title="Redis OM for Node.js"
+        description="Build a simple service with Redis OM for Node.js and Express"
+        page="/develop/node/redis-om"
         />
   </div>
 </div>
