removed quickly from the title

--- a/docs/develop/node/redis-om/index-redis-om.mdx
+++ b/docs/develop/node/redis-om/index-redis-om.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-redis-om
-title: Up and Running Quickly with Express and Redis OM for Node.js in 5-minutes
+title: Up and Running with Express and Redis OM for Node.js in 5-minutes
 sidebar_label: Redis OM for Node.js
 slug: /develop/node/redis-om
 authors: [guyroyse]
