Added links for Memory Usage Section

--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -146,11 +146,11 @@ Eviction occurs when the database is close to capacity. In this condition, the [
 ##### Possible Causes
 
 
-See Memory Usage Percentage Possible Causes
+[See Memory Usage Percentage Possible Causes](#possible-causes-1)
 
 ##### Remediation
 
-See Memory Usage Percentage Remediation
+[See Memory Usage Percentage Remediation](#remediation-1)
 
 ### Secondary Indicators
 
