--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -177,7 +177,7 @@ While these two metrics will not help you pinpoint a root cause, network traffic
 
 ##### redisenterprise.conns (unit: count)
 
-The count of current client connections to the database.
+The number of current client connections to the database.
 
 ##### Characteristics
 
