--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -366,7 +366,7 @@ instances:
 
 ### Step 5. Viewing the Datadog Dashboard UI
 
-Find the Redis Enterprise Integration under the Integration Menu
+Find the Redis Enterprise Integration under the Integration Menu:
 
 ![alt_text](images/image6.png "image_tooltip")
 
