--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -397,7 +397,7 @@ Datadog dashboard displaying host metrics of the 2nd host:
 
 ### Step 6. Verifying the Datadog Agent Status
 
-The below snippet of the result shows that Redis Enterprise integrator is working without any issue.
+Running the `datadog-agent` command shows that the Redis Enterprise integration is working correctly.
 
 
 ```
