--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -447,7 +447,7 @@ This command instructs memtier_benchmark to connect to your Redis Enterprise dat
 
 
 
-- Write objects only, no reads
+- Write objects only, no reads.
 - Each object is 500 bytes
 - Each object has random data in the value
 - Each key has a random pattern, then a colon, followed by a random pattern.
