--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -449,7 +449,7 @@ This command instructs memtier_benchmark to connect to your Redis Enterprise dat
 
 - Write objects only, no reads.
 - Each object is 500 bytes.
-- Each object has random data in the value
+- Each object has random data in the value.
 - Each key has a random pattern, then a colon, followed by a random pattern.
 
 Run this command until it fills up your database to where you want it for testing. The easiest way to check is on the database metrics page.
