--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -203,7 +203,7 @@ This metric should be monitored with both a minimum and maximum number of connec
 
 
 
-You can access the complete list of metrics [under this link.](https://github.com/DataDog/integrations-extras/blob/master/redisenterprise/metadata.csv)
+You can access the complete list of metrics [here](https://github.com/DataDog/integrations-extras/blob/master/redisenterprise/metadata.csv).
 
 ## Getting Started
 
