--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -207,7 +207,7 @@ You can access the complete list of metrics [here](https://github.com/DataDog/in
 
 ## Getting Started
 
-Follow the below steps to set up the Datadog agent to monitor your Redis Enterprise cluster, as well as database metrics:
+Follow the steps below to set up the Datadog agent to monitor your Redis Enterprise cluster, as well as database metrics:
 
 ### Quickstart Guide:
 
