--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -212,7 +212,7 @@ Follow the steps below to set up the Datadog agent to monitor your Redis Enterpr
 ### Quickstart Guide:
 
 
-#### Prerequisite:
+#### Prerequisites:
 
 
 
