--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -217,7 +217,7 @@ Follow the steps below to set up the Datadog agent to monitor your Redis Enterpr
 
 
 - [Follow this link](https://docs.redis.com/latest/rs/installing-upgrading/) to setup your Redis Enterprise cluster and database
-- Setup a Read-only user account by logging into your Redis Enterprise instance and visiting “Access Control” section
+- Setup a Read-only user account by logging into your Redis Enterprise instance and visiting the “Access Control” section
 
 
 
