--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -241,7 +241,7 @@ Follow the steps below to set up the Datadog agent to monitor your Redis Enterpr
 
 ### Step 1. Set Up a Datadog Agent
 
-Before we jump into the installation, let’s look at the various modes that you can run the datadog agent in:
+Before we jump into the installation, let’s look at the various modes that you can run the Datadog agent in:
 
 
 
