Added missing command

--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -282,7 +282,9 @@ Pick up your preferred OS distribution and install the Datadog agent
 
 Run the following command to install the integration wheel with the Agent. Replace the integration version with 1.0.1.
 
-
+ ```bash
+  datadog-agent integration install -t datadog-redisenterprise==<INTEGRATION_VERSION>
+ ```
 
 
 ### Step 3. Configuring Datadog configuration file
