--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -293,7 +293,7 @@ Copy the [sample configuration](https://github.com/DataDog/integrations-extras/b
 
 #### For Localhost Mode
 
-The below minimal configuration should be added to the Enterprise Master node.
+The following minimal configuration should be added to the Enterprise Master node.
 
 
 
