--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -314,7 +314,7 @@ The following minimal configuration should be added to the Enterprise Master nod
  ```
 
 
-Similarly, you need to add the below content into the configuration file for the Enterprise Follower:
+Similarly, you need to add the edit the configuration file for the Enterprise Follower to add the following:
 
 
  ```bash
