--- a/docs/explore/datadog/index-datadog.mdx
+++ b/docs/explore/datadog/index-datadog.mdx
@@ -336,7 +336,7 @@ Similarly, you need to add the edit the configuration file for the Enterprise Fo
 
 #### For External Monitor Mode
 
-The below configuration should be added to the Monitor node
+The following configuration should be added to the Monitor node
 
 
 ```
