--- a/docs/howtos/redisjson/using-java/index-usingjava.mdx
+++ b/docs/howtos/redisjson/using-java/index-usingjava.mdx
@@ -34,10 +34,12 @@ Replace the version with your desired version of Jedis, but note that you'll nee
 ### 3. Connect to Redis
 
 You'll need to initialize you connection to Redis. This means configuring and creating a `UnifiedJedis` instance:
+
 ```java
   HostAndPort config = new HostAndPort(Protocol.DEFAULT_HOST, 6479);
   PooledJedisConnectionProvider provider = new PooledJedisConnectionProvider(config);
-  UnifiedJedis client = new UnifiedJedis(provider); ```
+  UnifiedJedis client = new UnifiedJedis(provider);
+```
 
 ## 4. Model Your Domain
 
