--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -10,7 +10,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 Heroku is a cloud service provider and software development platform which facilitates fast and effective building, deploying and scaling of web applications. It offers you a ready-to-use environment that allows you to deploy your code fast.
 
-Some of the notable benefits of Heroku includes:
+Some of the notable benefits of Heroku include:
 
 - Users can get started with the free tier of Heroku
 - Let developers concentrate on coding and not server management
