--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -15,7 +15,7 @@ Some of the notable benefits of Heroku include:
 - Users can get started with the free tier of Heroku
 - Let developers concentrate on coding and not server management
 - Integrates with familiar developer workflows
-- Enhance the productivity of cloud app development team
+- Enhance the productivity of cloud app development teams
 - Helps your development, QA, and business stakeholders create a unified dashboard.
 - Support for Modern Open Source Languages
 
