--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -16,7 +16,7 @@ Some of the notable benefits of Heroku include:
 - Let developers concentrate on coding and not server management
 - Integrates with familiar developer workflows
 - Enhance the productivity of cloud app development teams
-- Helps your development, QA, and business stakeholders create a unified dashboard.
+- Helps your development, QA, and business stakeholders create a unified dashboard
 - Support for Modern Open Source Languages
 
 ### Step 1. Create Redis Enterprise Cloud
