--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -19,7 +19,7 @@ Some of the notable benefits of Heroku include:
 - Helps your development, QA, and business stakeholders create a unified dashboard
 - Support for Modern Open Source Languages
 
-### Step 1. Create Redis Enterprise Cloud
+### Step 1. Create a Redis Enterprise Cloud Database
 
 Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
