--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -21,7 +21,7 @@ Some of the notable benefits of Heroku include:
 
 ### Step 1. Create a Redis Enterprise Cloud Database
 
-Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
+Create your free Redis Enterprise Cloud account. [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
 ![heroku](rediscloud.png)
 
