--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -208,7 +208,7 @@ Where `c` corresponds to the active controller and `c.r` is a Redis client.
 #### Status codes
 
 - `200 - OK` - responded `PONG`
-- `406 - Not Acceptable` - could not read cookie from request, it may have effect when cookies not allowed on browser side
+- `406 - Not Acceptable` - could not read cookie from request, returned when cookies are not allowed on the client side
 - `429 - To Many Requests` - user send more than 10 requests / 10sec
 
 #### Headers
