--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -226,5 +226,5 @@ Where `c` corresponds to the active controller and `c.r` is a Redis client.
 ### References
 
 - [Deploy a Java app on Heroku using Redis](http://localhost:3000/create/heroku/herokujava)
-- [Deploy NodeJS app on Heroku using Redis](http://localhost:3000/create/heroku/herokunodejs)
+- [Deploy a NodeJS app on Heroku using Redis](http://localhost:3000/create/heroku/herokunodejs)
 - [Deploy Python app on Heroku using Redis](http://localhost:3000/create/heroku/herokupython)
