--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -227,4 +227,4 @@ Where `c` corresponds to the active controller and `c.r` is a Redis client.
 
 - [Deploy a Java app on Heroku using Redis](http://localhost:3000/create/heroku/herokujava)
 - [Deploy a NodeJS app on Heroku using Redis](http://localhost:3000/create/heroku/herokunodejs)
-- [Deploy Python app on Heroku using Redis](http://localhost:3000/create/heroku/herokupython)
+- [Deploy a Python app on Heroku using Redis](http://localhost:3000/create/heroku/herokupython)
