--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -71,7 +71,7 @@ https://hidden-woodland-03996.herokuapp.com/ | https://git.heroku.com/hidden-woo
 ### Step 6. Setting up Environment Variables
 
 Go to Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
-Refer to Step 1 for the reference.
+Refer to Step 1 for the correct values to use.
 
 ![heroku](heroku_app1_env.png)
 
