--- a/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
+++ b/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-herokunodejs
-title: Deploy NodeJS app on Heroku using Redis
+title: Deploy a NodeJS app on Heroku using Redis
 sidebar_label: How to deploy a NodeJS based application on Heroku using Redis 
 slug: /create/heroku/herokunodejs
 authors: [ajeet]
