--- a/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
+++ b/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
@@ -56,7 +56,7 @@ For this demonstration, we will be using a [Sample Rate Limiting application](ht
 
 
 
-Run the below CLI to have a functioning Git repository that contains a simple application as well as a package.json file.
+Run the commands below to get a functioning Git repository that contains a simple application as well as a package.json file.
 
 
 ```
