--- a/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
+++ b/docs/create/heroku/herokunodejs/index-herokunodejs.mdx
@@ -88,7 +88,7 @@ You now have a functioning Git repository that contains a simple application as 
 $ git push heroku
 ```
 
-Wait for few seconds and you will see the below messages being displayed:
+Wait for few seconds and you will see the messages below:
 
 ```
 remote: -----> Launching...
