--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-herokupython
-title: Deploy Python app on Heroku using Redis
+title: Deploy a Python app on Heroku using Redis
 sidebar_label: How to deploy a Python based application on Heroku using Redis
 slug: /create/heroku/herokupython
 authors: [ajeet]
