--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -18,7 +18,7 @@ Some of the notable features offered by Heroku are:
 - Total visibility across your entire app
 - Offers a powerful dashboard and CLI
 
-### Step 1. Create Redis Enterprise Cloud
+### Step 1. Create a Redis Enterprise Cloud Database
 
 Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
