--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -20,7 +20,7 @@ Some of the notable features offered by Heroku are:
 
 ### Step 1. Create a Redis Enterprise Cloud Database
 
-Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
+Create your free Redis Enterprise Cloud account. [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
 ![heroku](rediscloud.png)
 
