--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -53,7 +53,7 @@ If you are using Heroku for the first time, create your new Heroku account [thro
 
 ### Step 5. Connect your application to Redis Enterprise Cloud
 
-For this demonstration, we will be using a [Sample Rate Limiting application](https://github.com/redis-developer/basic-rate-limiting-demo-python)
+For this demonstration, we will be using a [Sample Rate Limiting application](https://github.com/redis-developer/basic-rate-limiting-demo-python).
 
 #### Clone the repository
 
