--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -61,7 +61,7 @@ For this demonstration, we will be using a [Sample Rate Limiting application](ht
     git clone https://github.com/redis-developer/basic-rate-limiting-demo-python
    ```
 
-Run the below CLI to have a functioning Git repository that contains a simple application as well as a package.json file.
+Run the commands below to get a functioning Git repository that contains a simple application as well as a package.json file.
 
 
 
