--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -73,7 +73,7 @@ https://fast-reef-76278.herokuapp.com/ | https://git.heroku.com/fast-reef-76278.
 
 ### Step 6. Setting up Environment Variables
 
-Go to Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
+Go to the Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
 Refer to Step 1 for the correct values to use.
 
 ![heroku](heroku_app1_env.png)
