--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -13,7 +13,7 @@ The following links provides you with the available options to run apps on Herok
  <div class="col">
      <RedisCard
         title="Heroku Portal"
-        description="Create Redis database on Heroku"
+        description="Create a Redis database on Heroku"
         page="/create/heroku/portal"
         />
  </div>
