--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -7,7 +7,7 @@ slug: /create/heroku
 
 import RedisCard from '@site/src/theme/RedisCard';
 
-The following links provides you with the available options to run apps on Heroku using Redis:
+The following links provide you with the available options to run apps on Heroku using Redis:
 
 <div class="row">
  <div class="col">
