--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -19,7 +19,7 @@ The following links provide you with the available options to run apps on Heroku
  </div>
  <div class="col">
     <RedisCard
-        title="Deploy NodeJS app on Heroku"
+        title="Deploy a NodeJS app on Heroku"
         description="How to deploy a NodeJS based application on Heroku using Redis"
         page="/create/heroku/herokunodejs"
         />
