--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -26,7 +26,7 @@ The following links provide you with the available options to run apps on Heroku
  </div>
  <div class="col">
     <RedisCard
-        title="Deploy Python app on Heroku"
+        title="Deploy a Python app on Heroku"
         description="How to deploy a Python app on Heroku using Redis"
         page="/create/heroku/herokupython"
         />
