--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -36,7 +36,7 @@ The following links provide you with the available options to run apps on Heroku
 <div class="row">
  <div class="col">
      <RedisCard
-        title="Deploy Java app on Heroku"
+        title="Deploy a Java app on Heroku"
         description="How to deploy Java app on Heroku using Redis"
         page="/create/heroku/herokujava"
         />
