--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -37,7 +37,7 @@ The following links provide you with the available options to run apps on Heroku
  <div class="col">
      <RedisCard
         title="Deploy a Java app on Heroku"
-        description="How to deploy Java app on Heroku using Redis"
+        description="How to deploy a Java app on Heroku using Redis"
         page="/create/heroku/herokujava"
         />
  </div>
