--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -228,7 +228,7 @@ Once Redis Cloud has been added, you will notice a REDISCLOUD_URL config vars in
 
 #### Step 5. Accessing the Redis Enterprise Cloud dashboard
 
-Go to Heroku and click on “Installed add-ons”
+Go to Heroku and click on “Installed add-ons”:
 
 ![heroku](heroku_addons.png)
 
