--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -34,7 +34,7 @@ You can quickly and easily get your apps up and running with Redis Enterprise Cl
 
 #### Step 1. Create Redis Enterprise Cloud
 
-Create your free Redis Enterprise Cloud account. [Follow this link to create Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
+Create your free Redis Enterprise Cloud account. [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
 
 ![heroku](rediscloud_timeseries.png)
 
