--- a/docs/create/heroku/index-heroku.mdx
+++ b/docs/create/heroku/index-heroku.mdx
@@ -44,7 +44,7 @@ The following links provide you with the available options to run apps on Heroku
  <div class="col">
      <RedisCard
         title="Deploy a Redis Rate Limiting app on Heroku in 5 Minutes"
-        description="How to deploy Redis Rate Limiting app on Heroku using Go"
+        description="How to deploy a Redis Rate Limiting app on Heroku using Go"
         page="/create/heroku/ratelimiting-go"
         />
  </div>
