--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-heroku-portal
-title: Create Redis database on Heroku 
+title: Create a Redis database on Heroku 
 sidebar_label: Redis on Heroku
 slug: /create/heroku/portal
 authors: [ajeet]
