--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -197,7 +197,7 @@ Ensure that you don’t have existing add-ons added in your account.
    ```
 
 
-Once Redis Cloud has been added, you will notice a REDISCLOUD_URL config vars in your heroku config containing the username, password, hostname and port of your first Redis Cloud database.
+Once Redis Cloud has been added, you will notice a REDISCLOUD_URL config var in your Heroku config containing the username, password, hostname and port of your first Redis Cloud database.
 
 
    ```bash
