--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -43,7 +43,7 @@ Save the database endpoint URL and password for future reference.
 
 #### Step 2. Create a Heroku account
 
-If you are using Heroku for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login)
+If you are using Heroku for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login).
 
 ![heroku](create_heroku.png)
 
