--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -154,7 +154,7 @@ Under this section, we will be creating Heroku account, use Heroku CLI to login 
     $ brew tap heroku/brew && brew install heroku
    ```
 
-Assuming that you already have Heroku account created, run the below command to login into Heroku via command prompt:
+Assuming that you have already created a Heroku, run the command to below login into Heroku:
 
 
    ```bash
