--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -92,7 +92,7 @@ Run the commands below to get a functioning Git repository that contains a simpl
 
 #### Step 6. Setting up Environmental variable
 
-Go to Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
+Go to the Heroku dashboard, click "Settings" and set REDIS_ENDPOINT_URI and REDIS_PASSWORD under the Config Vars.
 Refer to Step 1 for the reference.
 
 ![heroku](heroku_app01_env.png)
