--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -145,7 +145,7 @@ Please note that this method won't allow you to choose Redis Modules while creat
 :::
 
 
-Under this section, we will be creating Heroku account, use Heroku CLI to login and add Redis Enterprise Cloud as an add-on.
+In this section, we will create a Heroku account, use the Heroku CLI to login and add Redis Enterprise Cloud as an add-on.
 
 #### Step 1: Install Heroku 
 
