--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -232,7 +232,7 @@ Go to Heroku and click on “Installed add-ons”:
 
 ![heroku](heroku_addons.png)
 
-Click on “Redis Enterprise Cloud” and it will be redirected over Redis Enterprise Cloud Dashboard
+Click on “Redis Enterprise Cloud” and you will be redirected to the Redis Enterprise Cloud Dashboard.
 
 ![heroku](heroku_rediscloud1.png)
 
