--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -271,7 +271,7 @@ Open https://lit-island-48230.herokuapp.com/ and access the rate limiting app.
 #### Using Heroku Dashboard
 
 :::important
-Please note that this method won't allow you to choose Redis Modules while creating Redis database. Also, it doesn't provide you with the flexibility to choose Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
+Please note that this method won't allow you to choose Redis Modules while creating a Redis database. Also, it doesn't provide you with the flexibility to choose the Cloud platform of your choice. It is recommended to use Redis Enterprise Cloud directly. [Click here to learn more](/create/rediscloud).
 :::
 
 #### Step 1: Sign up for a Heroku account
